little fixes